--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "@types/node": "^16.18.27",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "axios": "^1.4.0",
+    "mapbox-gl": "^2.14.1",
     "react": "^18.2.0",
+    "react-animations": "^1.0.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-loader-spinner": "^5.3.4",
+    "react-map-gl": "^7.0.23",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.0.0-rc.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
